--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <img src="assets/profile.jpg" alt="Profile Picture" width="200">
+    <img src="assets/image.jpg" alt="Profile Picture" width="200">
     <a href="https://www.google.com" target="_blank">Visit Google</a>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
