--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <img src="assets/image.jpg" alt="Profile Picture" width="200">
     <a href="https://www.google.com" target="_blank">Visit Google</a>
+    <a href="about.html">About Me</a>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
