Update and rename slides.html to index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <select id="slideSelect" onchange="navigateToSlide()">
-            <option value="slides.html" selected>Introduction to the Course</option>
+            <option value="index.html" selected>Introduction to the Course</option>
             <option value="project.html">Course Project Introduction</option>
         </select>
     </header>
