--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <select id="slideSelect" onchange="navigateToSlide()">
-            <option value="slides.html">Introduction to the Course</option>
+            <option value="index.html">Introduction to the Course</option>
             <option value="project.html" selected>Course Project Introduction</option>
         </select>
     </header>
