--- a/project.html
+++ b/project.html
@@ -11,6 +11,7 @@
         <select id="slideSelect" onchange="navigateToSlide()">
             <option value="index.html">Introduction to the Course</option>
             <option value="project.html" selected>Course Project Introduction</option>
+            <option value="reflections.html">Course Learning Reflections</option>
         </select>
     </header>
     <div class="slide">
