--- a/reflections.html
+++ b/reflections.html
@@ -105,6 +105,42 @@
             <p><strong>Reflection:</strong> Each design technique offers a unique approach to problem-solving, applicable in diverse domains from optimization to game theory.</p>
         </section>
     </div>
+    <section>
+            <h2>Reflections on Problem-Solving and Algorithm Design</h2>
+            <p>The following reflections address critical aspects of problem-solving and algorithm design. Each question encourages deeper understanding and application of the concepts learned during the course.</p>
+            
+            <h3>1. Determining the Most Efficient Approach for Complex Problems</h3>
+            <ul>
+                <li><strong>Analyze the problem’s nature:</strong> Is it recursive, iterative, or graph-based?</li>
+                <li><strong>Evaluate input size and constraints:</strong> This helps identify the appropriate complexity (e.g., logarithmic, linear).</li>
+                <li><strong>Leverage design techniques:</strong> For example, divide-and-conquer for sorting or dynamic programming for optimization.</li>
+            </ul>
+            <p><strong>Reflection:</strong> Efficiency often involves balancing time and space complexity. For instance, choosing between recursion and iteration depends on memory constraints and the ease of implementation.</p>
+
+            <h3>2. Trade-Offs in Approaches</h3>
+            <p><strong>Scenario:</strong> Choosing between DFS and BFS for graph traversal.</p>
+            <ul>
+                <li><strong>DFS:</strong> Better for exploring depth; less memory-intensive.</li>
+                <li><strong>BFS:</strong> Finds shortest paths in unweighted graphs but can be memory-intensive.</li>
+            </ul>
+            <p><strong>Reflection:</strong> Choosing an approach depends on the specific requirements, such as memory constraints or traversal goals.</p>
+
+            <h3>3. Prioritizing Simplicity vs. Optimization</h3>
+            <ul>
+                <li><strong>Simplicity:</strong> Preferred for small-scale or prototype solutions.</li>
+                <li><strong>Optimization:</strong> Crucial for performance-critical or large-scale systems.</li>
+            </ul>
+            <p><strong>Reflection:</strong> While quick sort offers better performance, insertion sort might be simpler for small datasets due to its straightforward implementation.</p>
+        </section>
+    </div>
+    <script>
+        function navigateToSlide() {
+            const selectedSlide = document.getElementById("slideSelect").value;
+            window.location.href = selectedSlide;
+        }
+    </script>
+</body>
+</html>
     <script>
         function navigateToSlide() {
             const selectedSlide = document.getElementById("slideSelect").value;
