--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
     <div id="home" class="section home">
         <h1>Welcome to our City Design Portfolio!</h1>
-        <p><strong>Team Project:</strong> City Design</p>
-        <p><strong>Course Name:</strong> Algorithmic Problem Solving</p>
-        <p><strong>Course Code:</strong> 23ECSE309</p>
+        <p><strong>City Name:</strong> Hosa mysuru</p>
+        <p><strong>Course Name:</strong> Design and Analysis of Algorithms</p>
+        <p><strong>Course Code:</strong> 24ECSC205</p>
         <p><strong>Course Teacher:</strong> Prof. Prakash Hegade</p>
     </div>
 
