--- a/a_bcases.html
+++ b/a_bcases.html
@@ -68,7 +68,7 @@
             <p><strong>C++ implementation of Dijkstra's algorithm:</strong></p>
         
             <!-- Button to navigate to code page -->
-            <a href="code.c++" class="button">Code</a>
+            <a href="code.txt" class="button">Code</a>
         </div>
 
         <!-- Business Case 2: Waste Management and Recycling Company -->
