--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
         <p><strong>USN:</strong> 01fe23bcs202</p>
         <div class="member-buttons">
             <!-- Link to Niteen's Business Cases page -->
-            <a href="business-cases-niteen.html"><button class="btn">Business Cases</button></a>
+            <a href="niteensinghbuinesscases.html"><button class="btn">Business Cases</button></a>
             <!-- Link to Niteen's Reflections page -->
-            <a href="reflections-niteen.html"><button class="btn">Reflections</button></a>
+            <a href="niteensinghreflection.html"><button class="btn">Reflections</button></a>
         </div>
     </div>
 
