--- a/shreyas-business-case-and-algorithms (1).html
+++ b/shreyas-business-case-and-algorithms (1).html
@@ -82,17 +82,6 @@
             border-radius: 5px;
             overflow-x: auto;
         }
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            margin-top: 20px;
-            background-color: #007BFF;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 1rem;
-            transition: background-color 0.3s;
-        }
     </style>
 </head>
 <body>
@@ -102,17 +91,18 @@
 
     <main>
         <div class="section">
-            <h2>Transportation</h2>
-            <h3>SDG 9: Industry, Innovation, and Infrastructure</h3>
+            <h2>Agriculture</h2>
+            <h3>SDG 2: Zero Hunger</h3>
             <ul>
-                <li><strong>Target 9.1:</strong> Develop sustainable and resilient infrastructure.</li>
-                <li><strong>Indicator 9.1.2:</strong> Passenger and freight volumes by mode of transport.</li>
-            </ul>
-
-            <h3>SDG 11: Sustainable Cities and Communities</h3>
-            <ul>
-                <li><strong>Target 11.2:</strong> Provide sustainable transportation for all.</li>
-                <li><strong>Indicator 11.2.1:</strong> Proportion of population with convenient access to public transport.</li>
+                <li><strong>Target 2.3:</strong> Double the agricultural productivity and incomes of small-scale food producers.</li>
+                <ul>
+                    <li><strong>Indicator 2.3.1:</strong> Volume of production per labor unit by classes of farming/pastoral/forestry enterprise size.</li>
+                    <li><strong>Indicator 2.3.2:</strong> Average income of small-scale food producers.</li>
+                </ul>
+                <li><strong>Target 2.4:</strong> Ensure sustainable food production systems and resilient agricultural practices.</li>
+                <ul>
+                    <li><strong>Indicator 2.4.1:</strong> Proportion of agricultural area under productive and sustainable agriculture.</li>
+                </ul>
             </ul>
 
             <h3>Dijkstra's Algorithm</h3>
@@ -154,18 +144,17 @@ void dijkstra(int nodes, vector<pair<int, int>> adj[], int start) {
         </div>
 
         <div class="section">
-            <h2>Agriculture</h2>
-            <h3>SDG 2: Zero Hunger</h3>
+            <h2>Transportation</h2>
+            <h3>SDG 9: Industry, Innovation, and Infrastructure</h3>
             <ul>
-                <li><strong>Target 2.3:</strong> Double the agricultural productivity and incomes of small-scale food producers.</li>
-                <ul>
-                    <li><strong>Indicator 2.3.1:</strong> Volume of production per labor unit by classes of farming/pastoral/forestry enterprise size.</li>
-                    <li><strong>Indicator 2.3.2:</strong> Average income of small-scale food producers.</li>
-                </ul>
-                <li><strong>Target 2.4:</strong> Ensure sustainable food production systems and resilient agricultural practices.</li>
-                <ul>
-                    <li><strong>Indicator 2.4.1:</strong> Proportion of agricultural area under productive and sustainable agriculture.</li>
-                </ul>
+                <li><strong>Target 9.1:</strong> Develop sustainable and resilient infrastructure.</li>
+                <li><strong>Indicator 9.1.2:</strong> Passenger and freight volumes by mode of transport.</li>
+            </ul>
+
+            <h3>SDG 11: Sustainable Cities and Communities</h3>
+            <ul>
+                <li><strong>Target 11.2:</strong> Provide sustainable transportation for all.</li>
+                <li><strong>Indicator 11.2.1:</strong> Proportion of population with convenient access to public transport.</li>
             </ul>
 
             <h3>Kruskal's Algorithm</h3>
@@ -288,14 +277,7 @@ void quickSort(int A[], int low, int high) {
 }
             </pre>
         </div>
-
-        <div class="section">
-            <p><a href="shreyas-source-code.zip" class="button">course-project-eval-sheet(341)</a></p>
-            </div>
     </main>
 
     <footer>
-        <p>© 2024 SDG Mapping and Business Algorithms. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+        <p>© 2024 SDG Mapping and Business Algorithms. All rights
