--- a/a_bcases.html
+++ b/a_bcases.html
@@ -273,6 +273,31 @@
                 </tbody>
             </table>
 
+            <h3>Algorithms Used</h3>
+            <ul>
+                <li>
+                    <strong>Quick Sort:</strong>
+                    <ul>
+                        <li>Used to sort product IDs or warehouse data for better prioritization during optimization.</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>DFS and BFS Traversals:</strong>
+                    <ul>
+                        <li><strong>DFS (Depth-First Search):</strong> Explores all routes within the warehouse layout to analyze connectivity.</li>
+                        <li><strong>BFS (Breadth-First Search):</strong> Determines shortest paths to optimize internal transportation of goods.</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Heap Sort and Binary Search:</strong>
+                    <ul>
+                        <li><strong>Heap Sort:</strong> Prioritizes products based on their importance or demand.</li>
+                        <li><strong>Binary Search:</strong> Quickly locates a specific product or zone in a sorted list.</li>
+                    </ul>
+                </li>
+            </ul>
+
+
 
             <a href="code3.txt" class="button">Code</a>
         </div>
