--- a/shreyas-business-case-and-algorithms (1).html
+++ b/shreyas-business-case-and-algorithms (1).html
@@ -82,6 +82,17 @@
             border-radius: 5px;
             overflow-x: auto;
         }
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin-top: 20px;
+            background-color: #007BFF;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            transition: background-color 0.3s;
+        }
     </style>
 </head>
 <body>
@@ -276,6 +287,12 @@ void quickSort(int A[], int low, int high) {
     quickSort(A, s + 1, high);
 }
             </pre>
+
+            <div class="section">
+                <p><a href="shreyas-source-code.zip" class="button">Code (downloads zip file)</a></p>
+                <p><a href="shreyas-course-project-eval-sheet.docx" class="button">shreyas-course-project-eval-sheet</a></p>
+                <p><a href="shreyas daa project checklist.xlsx" class="button">shreyas daa project checklist.xlsx</a></p>
+            </div>
         </div>
     </main>
 
