--- a/a_bcases.html
+++ b/a_bcases.html
@@ -302,9 +302,10 @@
             <a href="code3.txt" class="button">Code</a>
         </div>
         <div class="section">
+            <p><a href="341 source code.zip" class="button">Codes of all business-case (zip file)</a></p>
             <p><a href="course-project-eval-sheet(341).docx" class="button">course-project-eval-sheet(341)</a></p>
             <p><a href="Copy of dsa-project-design-checklist(341).xlsx" class="button">dsa-project-design-checklist(check downloads)</a></p>
-            <p><a href="code.txt" class="button">Code</a></p>
+            
         </div>
 
     </div>
