--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
         <p><strong>USN:</strong> 01fe21bcs010</p>
         <div class="member-buttons">
             <!-- Link to Santosh's Business Cases page -->
-            <a href="business-cases-santosh.html"><button class="btn">Business Cases</button></a>
+            <a href="santhoshbusiness.html"><button class="btn">Business Cases</button></a>
             <!-- Link to Santosh's Reflections page -->
-            <a href="reflections-santosh.html"><button class="btn">Reflections</button></a>
+            <a href="santhoshreflections.html"><button class="btn">Reflections</button></a>
         </div>
     </div>
 </div>
